update with the compony projects

--- a/public/projects/images/desktop.ini
+++ b/public/projects/images/desktop.ini
@@ -3,3 +3,4 @@ Screenshot 2025-07-19 030539.png=@Screenshot 2025-07-19 030539,0
 Screenshot 2025-07-19 030638.png=@Screenshot 2025-07-19 030638,0
 Screenshot 2025-07-19 030556.png=@Screenshot 2025-07-19 030556,0
 Screenshot 2025-07-19 043636.png=@Screenshot 2025-07-19 043636,0
+Screenshot 2025-08-11 153913.png=@Screenshot 2025-08-11 153913,0
